--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -215,12 +215,14 @@
     <Compile Include="Services\ServiceLocator.cs" />
     <Compile Include="Storage\Files\FileSerializationHelper.cs" />
     <Compile Include="Storage\Files\FolderStorage.cs" />
-    <Compile Include="Storage\Files\IMediaStorage.cs" />
     <Compile Include="Storage\Files\MediaStorage.cs" />
+    <Compile Include="Storage\Files\StorageBase.cs" />
     <Compile Include="Storage\Files\StorageSizeCache.cs" />
     <Compile Include="Storage\Files\StorageSizeCacheItem.cs" />
     <Compile Include="Storage\ICacheFolderInfo.cs" />
+    <Compile Include="Storage\IMediaStorage.cs" />
     <Compile Include="Storage\IStorageService.cs" />
+    <Compile Include="Storage\IThreadDataStorage.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="HtmlAgilityPack">
