--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -224,12 +224,16 @@
     <Compile Include="Services\ServiceContainer.cs" />
     <Compile Include="Services\ServiceHelper.cs" />
     <Compile Include="Services\ServiceLocator.cs" />
+    <Compile Include="Storage\Files\ArchiveCollection.cs" />
+    <Compile Include="Storage\Files\ArchiveStore.cs" />
     <Compile Include="Storage\Files\CachedFile.cs" />
+    <Compile Include="Storage\Files\CachedStorageBase.cs" />
     <Compile Include="Storage\Files\DraftCollection.cs" />
     <Compile Include="Storage\Files\DraftDataStorage.cs" />
     <Compile Include="Storage\Files\DraftMediaStore.cs" />
     <Compile Include="Storage\Files\FileSerializationHelper.cs" />
     <Compile Include="Storage\Files\FolderStorage.cs" />
+    <Compile Include="Storage\Files\GroupFolderStorage.cs" />
     <Compile Include="Storage\Files\LinkCollectionStore.cs" />
     <Compile Include="Storage\Files\MediaStorage.cs" />
     <Compile Include="Storage\Files\PostDataStorage.cs" />
