Верхнеуровневые сетевые операции

--- a/DvachBrowser3.Core/DvachBrowser3.Core.csproj
+++ b/DvachBrowser3.Core/DvachBrowser3.Core.csproj
@@ -149,6 +149,8 @@
     <Compile Include="Logic\LiveTileService.cs" />
     <Compile Include="Logic\NetworkLogic.cs" />
     <Compile Include="Logic\NetworkLogic\CheckObjectOperation.cs" />
+    <Compile Include="Logic\NetworkLogic\LoadBoardPageOperation.cs" />
+    <Compile Include="Logic\NetworkLogic\LoadBoardPageOperationParameter.cs" />
     <Compile Include="Logic\NetworkLogic\LoadThreadOperation.cs" />
     <Compile Include="Logic\NetworkLogic\LoadThreadOperationParameter.cs" />
     <Compile Include="Logic\NetworkLogic\NetworkLogicOperation.cs" />
