--- a/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
+++ b/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
@@ -45,6 +45,7 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IPageStateAware.cs" />
     <Compile Include="Navigation\BoardLinkNavigaionKey.cs" />
     <Compile Include="Navigation\BoardLinkNavigationFactory.cs" />
     <Compile Include="Navigation\BoardMediaNavigationKey.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Navigation\ThreadNavigationKey.cs" />
     <Compile Include="Navigation\YoutubeNavigationKey.cs" />
     <Compile Include="ObservableObject.cs" />
+    <Compile Include="PageViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ViewModelServicesInitializer.cs" />
   </ItemGroup>
