--- a/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
+++ b/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
@@ -45,6 +45,7 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\ViewModelConstants.cs" />
     <Compile Include="Configuration\IViewConfiguration.cs" />
     <Compile Include="Configuration\IViewConfigurationService.cs" />
     <Compile Include="Configuration\ViewConfiguration.cs" />
@@ -72,9 +73,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ViewModelServicesInitializer.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="ViewModels\IEntryInvalidateViewModel.cs" />
+    <Compile Include="ViewModels\IHyperlinkViewModel.cs" />
+    <Compile Include="ViewModels\INetworkViewModel.cs" />
     <Compile Include="ViewModels\IPostCollectionViewModel.cs" />
     <Compile Include="ViewModels\IPostViewModel.cs" />
     <Compile Include="ViewModels\IQuoteViewModel.cs" />
+    <Compile Include="ViewModels\IThumbnailViewModel.cs" />
     <Compile Include="ViewModels\PostCollectionViewModel.cs" />
     <Compile Include="ViewModels\PostViewModel.cs" />
     <Compile Include="ViewModels\QuoteViewModel.cs" />
