--- a/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
+++ b/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
@@ -45,6 +45,7 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CancellablePageViewMovelBase.cs" />
     <Compile Include="Common\ViewModelConstants.cs" />
     <Compile Include="Configuration\IViewConfiguration.cs" />
     <Compile Include="Configuration\IViewConfigurationService.cs" />
@@ -74,17 +75,28 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ViewModelServicesInitializer.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="ViewModels\EmptyNetworkOperationWrapper.cs" />
+    <Compile Include="ViewModels\GlobalBoardIconViewModel.cs" />
     <Compile Include="ViewModels\IEntryInvalidateViewModel.cs" />
     <Compile Include="ViewModels\IHyperlinkViewModel.cs" />
+    <Compile Include="ViewModels\IIconViewModel.cs" />
+    <Compile Include="ViewModels\IIconWithNameViewModel.cs" />
+    <Compile Include="ViewModels\ImageSourceResult.cs" />
+    <Compile Include="ViewModels\ImageSourceResultHelper.cs" />
     <Compile Include="ViewModels\INetworkViewModel.cs" />
     <Compile Include="ViewModels\IPostCollectionViewModel.cs" />
+    <Compile Include="ViewModels\IPosterViewModel.cs" />
+    <Compile Include="ViewModels\IPostFlagsViewModel.cs" />
     <Compile Include="ViewModels\IPostViewModel.cs" />
     <Compile Include="ViewModels\IQuoteViewModel.cs" />
     <Compile Include="ViewModels\IThumbnailViewModel.cs" />
     <Compile Include="ViewModels\NetworkOperationWrapper.cs" />
     <Compile Include="ViewModels\PostCollectionViewModel.cs" />
+    <Compile Include="ViewModels\PosterViewModel.cs" />
+    <Compile Include="ViewModels\PostFlagsViewModel.cs" />
     <Compile Include="ViewModels\PostViewModel.cs" />
     <Compile Include="ViewModels\QuoteViewModel.cs" />
+    <Compile Include="ViewModels\ThumbnailViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
