--- a/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
+++ b/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
@@ -75,6 +75,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ViewModelServicesInitializer.cs" />
     <Compile Include="ViewModelBase.cs" />
+    <Compile Include="ViewModels\BringIntoViewEventArgs.cs" />
+    <Compile Include="ViewModels\BringIntoViewEventHandler.cs" />
     <Compile Include="ViewModels\EmptyNetworkOperationWrapper.cs" />
     <Compile Include="ViewModels\GlobalBoardIconViewModel.cs" />
     <Compile Include="ViewModels\IEntryInvalidateViewModel.cs" />
@@ -84,6 +86,8 @@
     <Compile Include="ViewModels\ImageSourceResult.cs" />
     <Compile Include="ViewModels\ImageSourceResultHelper.cs" />
     <Compile Include="ViewModels\INetworkViewModel.cs" />
+    <Compile Include="ViewModels\IPostCollectionFilterMode.cs" />
+    <Compile Include="ViewModels\IPostCollectionSource.cs" />
     <Compile Include="ViewModels\IPostCollectionViewModel.cs" />
     <Compile Include="ViewModels\IPosterViewModel.cs" />
     <Compile Include="ViewModels\IPostFlagsViewModel.cs" />
@@ -91,11 +95,19 @@
     <Compile Include="ViewModels\IQuoteViewModel.cs" />
     <Compile Include="ViewModels\IThumbnailViewModel.cs" />
     <Compile Include="ViewModels\NetworkOperationWrapper.cs" />
+    <Compile Include="ViewModels\PostCollectionKind.cs" />
+    <Compile Include="ViewModels\PostCollectionLoadedEventArgs.cs" />
+    <Compile Include="ViewModels\PostCollectionLoadedEventHandler.cs" />
+    <Compile Include="ViewModels\PostCollectionUpdateMode.cs" />
     <Compile Include="ViewModels\PostCollectionViewModel.cs" />
     <Compile Include="ViewModels\PosterViewModel.cs" />
     <Compile Include="ViewModels\PostFlagsViewModel.cs" />
+    <Compile Include="ViewModels\PostViewMode.cs" />
     <Compile Include="ViewModels\PostViewModel.cs" />
     <Compile Include="ViewModels\QuoteViewModel.cs" />
+    <Compile Include="ViewModels\RelayCommand.cs" />
+    <Compile Include="ViewModels\StaticPostCollectionSource.cs" />
+    <Compile Include="ViewModels\SupportedPostCollecetionUpdates.cs" />
     <Compile Include="ViewModels\ThumbnailViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
