--- a/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
+++ b/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CancellablePageViewMovelBase.cs" />
+    <Compile Include="CollectionHelper.cs" />
     <Compile Include="Common\ViewModelConstants.cs" />
     <Compile Include="Configuration\IViewConfiguration.cs" />
     <Compile Include="Configuration\IViewConfigurationService.cs" />
@@ -73,12 +74,14 @@
     <Compile Include="Navigation\YoutubeNavigationKey.cs" />
     <Compile Include="PageViewModelBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ViewModelKnownTypes.cs" />
     <Compile Include="Services\ViewModelServicesInitializer.cs" />
     <Compile Include="ViewModelBase.cs" />
     <Compile Include="ViewModels\BringIntoViewEventArgs.cs" />
     <Compile Include="ViewModels\BringIntoViewEventHandler.cs" />
     <Compile Include="ViewModels\EmptyNetworkOperationWrapper.cs" />
     <Compile Include="ViewModels\GlobalBoardIconViewModel.cs" />
+    <Compile Include="ViewModels\GlobalDispatcherHelper.cs" />
     <Compile Include="ViewModels\IEntryInvalidateViewModel.cs" />
     <Compile Include="ViewModels\IHyperlinkViewModel.cs" />
     <Compile Include="ViewModels\IIconViewModel.cs" />
@@ -91,6 +94,7 @@
     <Compile Include="ViewModels\IPostCollectionViewModel.cs" />
     <Compile Include="ViewModels\IPosterViewModel.cs" />
     <Compile Include="ViewModels\IPostFlagsViewModel.cs" />
+    <Compile Include="ViewModels\IPostNavigation.cs" />
     <Compile Include="ViewModels\IPostViewModel.cs" />
     <Compile Include="ViewModels\IQuoteViewModel.cs" />
     <Compile Include="ViewModels\IThumbnailViewModel.cs" />
@@ -102,6 +106,7 @@
     <Compile Include="ViewModels\PostCollectionViewModel.cs" />
     <Compile Include="ViewModels\PosterViewModel.cs" />
     <Compile Include="ViewModels\PostFlagsViewModel.cs" />
+    <Compile Include="ViewModels\PostNavigation.cs" />
     <Compile Include="ViewModels\PostViewMode.cs" />
     <Compile Include="ViewModels\PostViewModel.cs" />
     <Compile Include="ViewModels\QuoteViewModel.cs" />
