--- a/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
+++ b/DvachBrowser3.ViewModels/DvachBrowser3.ViewModels.csproj
@@ -84,6 +84,7 @@
     <Compile Include="ViewModels\BringIntoViewEventArgs.cs" />
     <Compile Include="ViewModels\BringIntoViewEventHandler.cs" />
     <Compile Include="ViewModels\EmptyNetworkOperationWrapper.cs" />
+    <Compile Include="ViewModels\Filters\PostCollectionFilterModeBase.cs" />
     <Compile Include="ViewModels\GlobalBoardIconViewModel.cs" />
     <Compile Include="ViewModels\GlobalDispatcherHelper.cs" />
     <Compile Include="ViewModels\IEntryInvalidateViewModel.cs" />
@@ -138,6 +139,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
