--- a/TestingApp/TestingApp.Windows/TestingApp.Windows.csproj
+++ b/TestingApp/TestingApp.Windows/TestingApp.Windows.csproj
@@ -108,6 +108,10 @@
       <Project>{b605da58-f366-4ca7-af30-041a2a311a25}</Project>
       <Name>DvachBrowser3.Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\DvachBrowser3.TextRender\DvachBrowser3.TextRender.csproj">
+      <Project>{eaa28772-59f6-490d-b680-c2b8dfae8421}</Project>
+      <Name>DvachBrowser3.TextRender</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HubPage.xaml.cs">
@@ -120,8 +124,12 @@
       <DependentUpon>ItemPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestElementFactory.cs" />
     <Compile Include="TestPage.xaml.cs">
       <DependentUpon>TestPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TextPage.xaml.cs">
+      <DependentUpon>TextPage.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +159,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="TestPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TextPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
